# libusb-demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  usb.cpp
lib/: libusb-1.0.lib
